Fixed various bugs
submenu caret
logout issue
confusing counter issue
connection not showing up on connection page
fixed images on frontpage

--- a/clientApp/css/bootup.css
+++ b/clientApp/css/bootup.css
@@ -38,3 +38,23 @@
   background: white;
   height: 100px;
 }
+.dropdown-submenu > a:after {
+  display: none;
+  content: " ";
+  float: none;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: none;
+  border-width: none;
+  margin-top: none;
+  margin-right: none;
+}
+.counter {
+  color: #717577;
+  cursor: default;
+}
+.counter:hover {
+  color: #717577;
+  cursor: default;
+}
