--- a/clientApp/css/frontpage.css
+++ b/clientApp/css/frontpage.css
@@ -20,6 +20,7 @@
   text-align: none;
 }
 .frontpage__first-timer {
+  background-color: yellow;
   text-align: center;
   margin-top: 3em;
   margin-bottom: 3em;
